# ragaroo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: README.md  compare_hyde.py  compare_models.py  compare_multiple_datasets.py  compare_rerank.py  compare_retrievers.py  compare_topk.py
ragaroo/: __init__.py  _hf.py  base.py  dataset.py  experiment.py  report.py
ragaroo/evaluation/: __init__.py  evaluation.py  metrics.py
ragaroo/pipeline/: pipeline.py
ragaroo/query_augmentation/: __init__.py  hyde.py  intent_clarification.py  llm_provider.py  specs.py  spelling_correction.py
ragaroo/reranking/: __init__.py  cross_encoder.py  st_reranker.py
ragaroo/retrieval/: __init__.py  cache.py  types.py
ragaroo/retrieval/dense/: __init__.py  dense.py  proprietary_embedder.py  st_embedder.py
ragaroo/retrieval/hybrid/: hybrid.py
ragaroo/retrieval/lexical/: __init__.py  bm25.py  lexical.py
ragaroo/retrieval/sparse/: __init__.py  sparse.py  st_sparse_embedder.py
tests/integration/: __init__.py  test_examples.py  test_experiment.py  test_mixed_pipelines.py
tests/unit/: __init__.py  test_bm25_retriever.py  test_dataset.py  test_dense_retriever.py  test_hf_token.py  test_hybrid_retriever.py  test_metrics.py  test_pipeline_query_augmentation.py  test_proprietary_embedder.py  test_query_augmentation.py  test_report.py  test_reranker.py  test_retrieval_exports.py  test_sparse_retriever.py  test_st_embedder.py  test_store_models.py  test_top_k_behavior.py
